@@ -1,6 +1,7 @@
 // Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.maven.testFramework;
 
+import com.intellij.diagnostic.ThreadDumper;
 import com.intellij.execution.wsl.WSLDistribution;
 import com.intellij.execution.wsl.WslDistributionManager;
 import com.intellij.ide.DataManager;
@@ -27,7 +28,7 @@ import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.rt.execution.junit.FileComparisonFailure;
+import com.intellij.rt.execution.junit.FileComparisonData;
 import com.intellij.testFramework.*;
 import com.intellij.testFramework.fixtures.IdeaProjectTestFixture;
 import com.intellij.testFramework.fixtures.IdeaTestFixtureFactory;
@@ -45,12 +46,15 @@ import org.jetbrains.idea.maven.server.MavenServerConnector;
 import org.jetbrains.idea.maven.server.MavenServerConnectorImpl;
 import org.jetbrains.idea.maven.server.MavenServerManager;
 import org.jetbrains.idea.maven.server.RemotePathTransformerFactory;
+import org.jetbrains.idea.maven.utils.MavenLog;
 import org.jetbrains.idea.maven.utils.MavenProgressIndicator;
 import org.jetbrains.idea.maven.utils.MavenUtil;
+import org.junit.AssumptionViolatedException;
 
 import java.awt.*;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.Method;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -67,7 +71,6 @@ public abstract class MavenTestCase extends UsefulTestCase {
             <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     """;
-  protected static final MavenConsole NULL_MAVEN_CONSOLE = new NullMavenConsole();
   private MavenProgressIndicator myProgressIndicator;
   private WSLDistribution myWSLDistribution;
   protected RemotePathTransformerFactory.Transformer myPathTransformer;
@@ -85,9 +88,12 @@ public abstract class MavenTestCase extends UsefulTestCase {
   protected VirtualFile myProjectPom;
   protected List<VirtualFile> myAllPoms = new ArrayList<>();
 
+  protected static final boolean preimportTestMode = Boolean.getBoolean("MAVEN_TEST_PREIMPORT");
+
 
   @Override
   protected void setUp() throws Exception {
+    assumeThisTestCanBeReusedForPreimport();
     super.setUp();
 
     setUpFixtures();
@@ -102,7 +108,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
 
     myProgressIndicator = new MavenProgressIndicator(myProject, new EmptyProgressIndicator(ModalityState.nonModal()), null);
 
-    MavenWorkspaceSettingsComponent.getInstance(myProject).loadState(new MavenWorkspaceSettings());
+    MavenWorkspaceSettingsComponent.getInstance(myProject).loadState(new MavenWorkspacePersistedSettings());
 
     String home = getTestMavenHome();
     if (home != null) {
@@ -131,6 +137,27 @@ public abstract class MavenTestCase extends UsefulTestCase {
     });
   }
 
+  public static void assumeTestCanBeReusedForPreimport(Class<?> aClass, String testName) {
+    if (!preimportTestMode) return;
+    try {
+      InstantImportCompatible annotation = aClass.getDeclaredAnnotation(InstantImportCompatible.class);
+      if (annotation == null) {
+        Method testMethod = aClass.getMethod(testName);
+        annotation = testMethod.getDeclaredAnnotation(InstantImportCompatible.class);
+        if (annotation == null) {
+          throw new AssumptionViolatedException("No InstantImportCompatible annotation present on class and method in pre-import testing mode, skipping test");
+        }
+      }
+    }
+    catch (NoSuchMethodException ignore) {
+    }
+  }
+
+  protected void assumeThisTestCanBeReusedForPreimport() {
+    assumeTestCanBeReusedForPreimport(this.getClass(), getName());
+  }
+
+
   private void setupWsl() {
     String wslMsId = System.getProperty("wsl.distribution.name");
     if (wslMsId == null) return;
@@ -157,9 +184,13 @@ public abstract class MavenTestCase extends UsefulTestCase {
   protected void runBare(@NotNull ThrowableRunnable<Throwable> testRunnable) throws Throwable {
     LoggedErrorProcessor.executeWith(new LoggedErrorProcessor() {
       @Override
-      public @NotNull Set<Action> processError(@NotNull String category, @NotNull String message, String @NotNull [] details, @Nullable Throwable t) {
+      public @NotNull Set<Action> processError(@NotNull String category,
+                                               @NotNull String message,
+                                               String @NotNull [] details,
+                                               @Nullable Throwable t) {
         boolean intercept = t != null && (
-          StringUtil.notNullize(t.getMessage()).contains("The network name cannot be found") && message.contains("Couldn't read shelf information") ||
+          StringUtil.notNullize(t.getMessage()).contains("The network name cannot be found") &&
+          message.contains("Couldn't read shelf information") ||
           "JDK annotations not found".equals(t.getMessage()) && "#com.intellij.openapi.projectRoots.impl.JavaSdkImpl".equals(category));
         return intercept ? Action.NONE : Action.ALL;
       }
@@ -218,8 +249,15 @@ public abstract class MavenTestCase extends UsefulTestCase {
   }
 
 
-  private void checkAllMavenConnectorsDisposed() {
-    assertEmpty("all maven connectors should be disposed", MavenServerManager.getInstance().getAllConnectors());
+  private static void checkAllMavenConnectorsDisposed() {
+    Collection<MavenServerConnector> connectors = MavenServerManager.getInstance().getAllConnectors();
+    if (!connectors.isEmpty()) {
+      MavenLog.LOG.warn("Connectors not empty, printing thread dump");
+      MavenLog.LOG.warn("===============================================");
+      MavenLog.LOG.warn(ThreadDumper.getThreadDumpInfo(ThreadDumper.getThreadInfos(), false).getRawDump());
+      MavenLog.LOG.warn("===============================================");
+      fail("all maven connectors should be disposed but got " + connectors);
+    }
   }
 
   private void ensureTempDirCreated() throws IOException {
@@ -366,7 +404,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
   protected VirtualFile createSettingsXml(String innerContent) throws IOException {
     var content = createSettingsXmlContent(innerContent);
     var path = Path.of(myDir.getPath(), "settings.xml");
-    Files.write(path, content.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(path, content);
     getMavenGeneralSettings().setUserSettingsFile(path.toString());
     return LocalFileSystem.getInstance().refreshAndFindFileByNioFile(path);
   }
@@ -426,10 +464,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
     VirtualFile f = dir.findChild("pom.xml");
     if (f == null) {
       try {
-        f = WriteAction.computeAndWait(() -> {
-          VirtualFile res = dir.createChildData(null, "pom.xml");
-          return res;
-        });
+        f = WriteAction.computeAndWait(() -> dir.createChildData(null, "pom.xml"));
       }
       catch (IOException e) {
         throw new RuntimeException(e);
@@ -441,15 +476,15 @@ public abstract class MavenTestCase extends UsefulTestCase {
   }
 
   @NonNls
-  @Language(value = "XML")
+  @Language("XML")
   public static String createPomXml(@NonNls @Language(value = "XML", prefix = "<project>", suffix = "</project>") String xml) {
-    return "<?xml version=\"1.0\"?>" +
-           "<project xmlns=\"http://maven.apache.org/POM/4.0.0\"" +
-           "         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"" +
-           "         xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\">" +
-           "  <modelVersion>4.0.0</modelVersion>" +
-           xml +
-           "</project>";
+    return """
+             <?xml version="1.0"?>
+             <project xmlns="http://maven.apache.org/POM/4.0.0"
+                      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+               <modelVersion>4.0.0</modelVersion>
+             """ + xml + "</project>";
   }
 
   protected VirtualFile createProfilesXmlOldStyle(String xml) {
@@ -484,10 +519,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
     VirtualFile f = dir.findChild("profiles.xml");
     if (f == null) {
       try {
-        f = WriteAction.computeAndWait(() -> {
-          VirtualFile res = dir.createChildData(null, "profiles.xml");
-          return res;
-        });
+        f = WriteAction.computeAndWait(() -> dir.createChildData(null, "profiles.xml"));
       }
       catch (IOException e) {
         throw new RuntimeException(e);
@@ -498,7 +530,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
   }
 
   @Language("XML")
-  private static String createValidProfiles(String xml, boolean oldStyle) {
+  private static String createValidProfiles(@Language("XML") String xml, boolean oldStyle) {
     if (oldStyle) {
       return "<?xml version=\"1.0\"?>" +
              "<profiles>" +
@@ -601,10 +633,10 @@ public abstract class MavenTestCase extends UsefulTestCase {
   protected static <T> void assertContain(Collection<? extends T> actual, T... expected) {
     List<T> expectedList = Arrays.asList(expected);
     if (actual.containsAll(expectedList)) return;
-    Set<T> absent = new HashSet<T>(expectedList);
+    Set<T> absent = new HashSet<>(expectedList);
     absent.removeAll(actual);
-    fail("expected: " + expectedList + "\n" + "actual: " + actual.toString() +
-         "\nthis elements not present: " + absent.toString());
+    fail("expected: " + expectedList + "\n" + "actual: " + actual +
+         "\nthis elements not present: " + absent);
   }
 
   protected static <T> void assertDoNotContain(List<T> actual, T... expected) {
@@ -617,9 +649,10 @@ public abstract class MavenTestCase extends UsefulTestCase {
     try {
       assertSameLinesWithFile(filePath, expectedText);
     }
-    catch (FileComparisonFailure e) {
-      String expected = e.getExpected();
-      String actual = e.getActual();
+    catch (AssertionError e) {
+      if (!(e instanceof FileComparisonData fcf)) throw e;
+      String expected = fcf.getExpectedStringPresentation();
+      String actual = fcf.getActualStringPresentation();
       assertUnorderedElementsAreEqual(expected.split("\n"), actual.split("\n"));
     }
   }
